# checkpoint

./: Dockerfile  build.sh  dev_install.sh  install.sh  main.py  pyproject.toml  test_buzz.py
app/: MFRC522.py  MFRC522Handler.py
pkg/: checkpoint.deb  checkpoint_0.1.0_arm64.deb
pkg/checkpoint/DEBIAN/: control  postinst  prerm
pkg/checkpoint/opt/checkpoint/: .gitignore  Dockerfile  build.sh  docker-compose.yml  main.py  pyproject.toml  swagger.json
pkg/checkpoint/opt/checkpoint/app/: MFRC522.py
pkg/checkpoint/opt/checkpoint/static/: index.html
pkg/checkpoint/opt/checkpoint/static/_app/: env.js  version.json
pkg/checkpoint/opt/checkpoint/static/_app/immutable/chunks/: 0kQv1Rv8.js  BaKfeJtT.js  BpYs9rxi.js  DLUjBBE0.js  DTb4XZBJ.js  DmWkLBF0.js  dSgRr1jQ.js  dUbt8T-O.js  k-dchefe.js  zaW237m1.js
pkg/checkpoint/opt/checkpoint/static/_app/immutable/entry/: app.BpJ8gOjW.js  app.CSeHIEZc.js  app.C_t0wsv6.js  app.DAF6v5G_.js  start.BAi5hPfX.js  start.BZYa3VzY.js  start.BtU9A3KQ.js  start.CHrjGaOo.js  start.CSwx4P6Q.js  start.CczOV3LU.js  start.D87-Gaig.js  start.qu2uC90D.js
pkg/checkpoint/opt/checkpoint/static/_app/immutable/nodes/: 0.Lq4Pw4nw.js  1.DmR66ba0.js  1.GvfOxRsk.js  2.C2wUj941.js  2.HrbjLlSN.js
pkg/checkpoint/opt/checkpoint/web/src/: app.css
pkg/checkpoint/opt/checkpoint/web/src/lib/: websocket.svelte.ts
pkg/checkpoint/opt/checkpoint/web/src/routes/: +page.svelte
static/: index.html
static/_app/: version.json
web/: .env  package-lock.json  package.json  svelte.config.js
web/src/lib/: user-display.svelte  websocket.svelte.ts  (+1 more)
(+42 files in other folders)
